Frissítés java 17-re és a lombok kukázása (rekordok használata @Value helyett)